Add comments to application.conf

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -36,9 +36,17 @@ akka {
   actor {
 
     debug {
-      autoreceive = on
-      lifecycle = on
-      unhandled = on
+        # enable function of LoggingReceive, which is to log any received message at DEBUG level
+        receive = off
+
+        # enable DEBUG logging of all AutoReceiveMessages (Kill, PoisonPill etc.)
+        autoreceive = on
+
+         # enable DEBUG logging of actor lifecycle changes
+        lifecycle = on
+
+        # enable DEBUG logging of unhandled messages
+        unhandled = on
     }
 
     deployment {
