--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -40,7 +40,7 @@ akka {
         receive = off
 
         # enable DEBUG logging of all AutoReceiveMessages (Kill, PoisonPill etc.)
-        autoreceive = on
+        autoreceive = off
 
          # enable DEBUG logging of actor lifecycle changes
         lifecycle = on
@@ -57,7 +57,17 @@ akka {
 
       /XQTSRunner/TestCaseRunnerRouter {
         router = smallest-mailbox-pool
-        nr-of-instances = 15 // TODO(AR) size the same as broker pool and make app configurable
+
+        nr-of-instances = 20  // same as eXist-db's broker pool in its conf.xml
+
+#          optimal-size-exploring-resizer {
+#            enabled = on
+#            lower-bound = 4
+#            upper-bound = 20  // same as eXist-db's broker pool in its conf.xml
+#            action-interval = 5s
+#            downsize-after-underutilized-for = 2m
+#          }
+
       }
 
       /XQTSRunner/JUnitResultsSerializerRouter {
